--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -93,10 +93,10 @@
                                                     What are you?
                                                     <div class="row">
                                                         <div class="col-md-6 mb-4">
-                                                            <div class="card h-100">
+                                                            <div class="register-card h-100">
                                                                 <div class="card-body">
                                                                     <h5 class="card-title">Service Provider</h5>
-                                                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                                    <p class="card-text">Accept Service request anytime , anywhere!</p>
                                                                 </div>
                                                                 <div class="card-footer">
                                                                     <a href="/register/serviceprovider" class="btn btn-primary">Register</a>
@@ -104,10 +104,10 @@
                                                             </div>
                                                         </div>
                                                         <div class="col-md-6 mb-4">
-                                                            <div class="card h-100">
+                                                            <div class="register-card h-100">
                                                                 <div class="card-body">
                                                                     <h5 class="card-title">Client</h5>
-                                                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                                                    <p class="card-text">Create services of any type anytime, anywhere!</p>
                                                                 </div>
                                                                 <div class="card-footer">
                                                                     <a th:href="@{/register/client}" class="btn btn-primary">Register</a>
