--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -58,6 +58,18 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
 
+/*Start of Custom css created for Errand only*/
+.register-card {
+  opacity: 0.5; /* Set default opacity */
+  transition: opacity 0.2s ease-in-out; /* Add a transition effect */
+}
+
+.register-card:hover {
+  opacity: 1; /* Change opacity on hover */
+  transform: scale(1.05); /* scale up the card slightly on hover */
+}
+/*End of Custom css created for Errand only*/
+
 body {
   margin: 0;
   font-family: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -9918,7 +9930,7 @@ a:focus {
 }
 
 .bg-errand{
-    background-color: gray;
+    background-color: #001219;
 }
 
 .bg-gradient-info {
@@ -10869,14 +10881,14 @@ a:focus {
   background: url("../assets/img/errandlogo.png");
   background-position: center;
   background-size: cover;
-  background-color: yellow;
+  background-color: #CA6702;
 }
 
 .bg-register-image {
   background: url("../assets/img/errandlogo.png");
   background-position: center;
   background-size: cover;
-  background-color: #005F73;
+  background-color: #CA6702;
 }
 
 .bg-password-image {
