--- a/src/main/resources/templates/register-client.html
+++ b/src/main/resources/templates/register-client.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>SB Admin 2 - Register</title>
+    <title>Errand Client Registration</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -45,7 +45,7 @@
                                         <input type="text"
                                                class="form-control"
                                                placeholder="First name"
-                                               th:field="*{client.firstName}"
+                                               th:field="*{firstName}"
                                                required="required"
                                         >
                                     </div>
@@ -53,7 +53,7 @@
                                         <input type="text"
                                                class="form-control"
                                                placeholder="Last name"
-                                               th:field="*{client.lastName}"
+                                               th:field="*{lastName}"
                                                required="required"
                                         >
                                     </div>
@@ -62,14 +62,14 @@
                                     <input type="text"
                                            class="form-control"
                                            placeholder="Contact Number"
-                                           th:field="*{client.contactNumber}"
+                                           th:field="*{contactNumber}"
                                     >
                                 </div>
                                 <div class="form-group">
                                     <input type="text"
                                            class="form-control"
                                            placeholder="Email"
-                                           th:field="*{client.email}"
+                                           th:field="*{email}"
                                            required="required"
                                     >
                                 </div>
