--- a/src/main/resources/templates/register-serviceprovider.html
+++ b/src/main/resources/templates/register-serviceprovider.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin 2 - Register</title>
+  <title>Errand Service Provider Registration</title>
 
   <!-- Custom fonts for this template-->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -45,7 +45,7 @@
                   <input type="text"
                          class="form-control"
                          placeholder="First name"
-                         th:field="*{serviceProvider.firstName}"
+                         th:field="*{firstName}"
                          required="required"
                   >
                 </div>
@@ -53,7 +53,7 @@
                   <input type="text"
                          class="form-control"
                          placeholder="Last name"
-                         th:field="*{serviceProvider.lastName}"
+                         th:field="*{lastName}"
                          required="required"
                   >
                 </div>
@@ -62,14 +62,14 @@
                 <input type="text"
                        class="form-control"
                        placeholder="Contact Number"
-                       th:field="*{serviceProvider.contactNumber}"
+                       th:field="*{contactNumber}"
                 >
               </div>
               <div class="form-group">
                 <input type="text"
                        class="form-control"
                        placeholder="Email"
-                       th:field="*{serviceProvider.email}"
+                       th:field="*{email}"
                        required="required"
                 >
               </div>
@@ -90,6 +90,14 @@
                          required="required"
                   >
                 </div>
+              </div>
+              <div class="form-group">
+                <input type="text"
+                       class="form-control"
+                       placeholder="Business Name (Optional)"
+                       th:field="*{businessName}"
+                       required="required"
+                >
               </div>
               <button type="submit" class="btn btn-primary btn-user btn-block" th:href="@{/register}">
                 Register Account
