Redirect to login upon successful registration

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,6 +48,9 @@
                                     <div th:if="${param.logout}" class="alert alert-success">
                                         You have been logged out.
                                     </div>
+                                    <div th:if="${param.success}" class="alert alert-success">
+                                        User account created successfully!
+                                    </div>
                                     <form class="user" th:action="@{/login}" method="post" role="form">
                                         <div class="form-group">
                                             <input id="username"
