--- a/src/main/resources/templates/register-client.html
+++ b/src/main/resources/templates/register-client.html
@@ -63,6 +63,7 @@
                                            class="form-control"
                                            placeholder="Contact Number"
                                            th:field="*{contactNumber}"
+                                           required="required"
                                     >
                                 </div>
                                 <div class="form-group">
@@ -91,7 +92,7 @@
                                         >
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-primary btn-user btn-block" th:href="@{/register}">
+                                <button type="submit" class="btn btn-primary btn-user btn-block">
                                     Register Account
                                 </button>
                                 <hr>
