--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -37,10 +37,11 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="admin/tasks">
+            <a class="nav-link" href="/admin/tasks">
                 <i class="fas fa-fw fa-briefcase"></i>
                 <span>Tasks</span></a>
         </li>
+
 
     </section>
     <!-- Page Content-->
