--- a/src/main/resources/templates/register-serviceprovider.html
+++ b/src/main/resources/templates/register-serviceprovider.html
@@ -63,10 +63,11 @@
                        class="form-control"
                        placeholder="Contact Number"
                        th:field="*{contactNumber}"
+                       required="required"
                 >
               </div>
               <div class="form-group">
-                <input type="text"
+                <input type="email"
                        class="form-control"
                        placeholder="Email"
                        th:field="*{email}"
@@ -96,10 +97,9 @@
                        class="form-control"
                        placeholder="Business Name (Optional)"
                        th:field="*{businessName}"
-                       required="required"
                 >
               </div>
-              <button type="submit" class="btn btn-primary btn-user btn-block" th:href="@{/register}">
+              <button type="submit" class="btn btn-primary btn-user btn-block">
                 Register Account
               </button>
               <hr>
