--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -23,10 +23,7 @@
 
 
     <title layout:title-pattern="$CONTENT_TITLE - $LAYOUT_TITLE">ERRAND</title>
-
 </head>
-
-
 
 <!-- Page Wrapper -->
 <div id="wrapper">
@@ -36,10 +33,6 @@
 
         <!-- Sidebar - Brand -->
         <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
-            <!--            <div class="sidebar-brand-icon ">-->
-
-            <!--                &lt;!&ndash;                <i class="fas fa-laugh-wink"></i>&ndash;&gt;-->
-            <!--            </div>-->
             <img src="../assets/img/errandlogo-borderless.png" style="width: 20px; height: auto;" class="mr-2">
             <div class="sidebar-brand-text ">
                 ERRAND
@@ -55,7 +48,6 @@
         <div class="text-center d-none d-md-inline">
             <button class="rounded-circle border-0" id="sidebarToggle"></button>
         </div>
-
 
     </ul>
     <!-- End of Sidebar -->
@@ -121,9 +113,11 @@
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-gray-600 small">Administrator</span>
-                            <img class="img-profile rounded-circle"
-                                 src="assets/img/CHAMP-Logo.jpg">
+                            <div layout:fragment="profile-name"></div>
+
+                            <i class="fas fa-user"></i>
+<!--                            <img class="img-profile rounded-circle"-->
+<!--                                 src="/assets/img/CHAMP-Logo.jpg">-->
                         </a>
                         <!-- Dropdown - User Information -->
                         <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -151,8 +145,6 @@
             <body layout:fragment="body"></body>
             <!-- Begin Page Content -->
             <div class="container-fluid">
-
-
 
             </div>
             <!-- /.container-fluid -->
