--- a/src/main/resources/templates/admin-clients.html
+++ b/src/main/resources/templates/admin-clients.html
@@ -36,7 +36,7 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="/admin/serviceProviders">
           <i class="fas fa-fw fa-tools"></i>
           <span>Service Providers</span></a>
       </li>
@@ -56,7 +56,7 @@
       <div class="card shadow mb-4">
 
         <div class="card-header py-3">
-          <h6 class="m-0 font-weight-bold text-primary">Client Management</h6>
+          <h6 class="m-0 font-weight-bold text-primary">Clients Management</h6>
         </div>
 
         <div class="card-body">
