--- a/src/main/resources/templates/admin-tasks.html
+++ b/src/main/resources/templates/admin-tasks.html
@@ -1,11 +1,15 @@
 <html
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{admin-layout}">
+        layout:decorate="~{layout}">
 <head>
   <title>Tasks Management</title>
 </head>
 <body class="d-flex flex-column h-100" xmlns:th="http://www.w3.org/1999/xhtml">
+
+  <div layout:fragment="profile-name">
+    <span class="mr-2 d-none d-lg-inline text-gray-600 small" th:text="${user.username + ' (Administrator)'}"></span>
+  </div>
 
   <section layout:fragment="sidebar-item" class="py-2">
     <!-- Divider -->
@@ -30,7 +34,7 @@
     </li>
 
     <li class="nav-item">
-      <a class="nav-link" href="charts.html">
+      <a class="nav-link" href="/admin/serviceProviders">
         <i class="fas fa-fw fa-tools"></i>
         <span>Service Providers</span></a>
     </li>
