--- a/src/main/resources/templates/client-tasks.html
+++ b/src/main/resources/templates/client-tasks.html
@@ -35,9 +35,179 @@
 <!-- Page Content-->
 <section layout:fragment="body" class="px-3 py-1">
 
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#taskModal">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newTaskModal">
         Create New Task
     </button>
+    <div class="row">
+        <div class="col-lg-3">
+
+            <!-- Collapsable Card Example -->
+            <div class="card border-left-secondary shadow mt-4 mb-4">
+                <!-- Card Header - Accordion -->
+                <a href="#collapseCardExample" class="d-block card-header py-3" data-toggle="collapse"
+                   role="button" aria-expanded="true" aria-controls="collapseCardExample">
+                    <h6 class="m-0 font-weight-bold text-primary">Pending Tasks</h6>
+                </a>
+                <!-- Card Content - Collapse -->
+                <div class="collapse show" id="collapseCardExample">
+                    <div class="card-body">
+                        <!-- Dropdown Card Example -->
+                        <div class="card shadow mb-4">
+                            <!-- Card Header - Dropdown -->
+                            <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                <h6 class="m-0 font-weight-bold text-secondary">Air Conditioner Repair</h6>
+                                <div class="dropdown no-arrow">
+                                    <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
+                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                                         aria-labelledby="dropdownMenuLink">
+                                        <div class="dropdown-header">Action:</div>
+                                        <a class="dropdown-item" href="#">Edit</a>
+                                        <a class="dropdown-item" href="#">Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                Label Target Date
+                            </div>
+                        </div>
+                        <!-- Dropdown Card Example -->
+                        <div class="card shadow mb-4">
+                            <!-- Card Header - Dropdown -->
+                            <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                <h6 class="m-0 font-weight-bold text-secondary">Laundry Service</h6>
+                                <div class="dropdown no-arrow">
+                                    <a class="dropdown-toggle" href="#" role="button" id="pendingDropdownMenuLink"
+                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                                         aria-labelledby="pendingDropdownMenuLink">
+                                        <div class="dropdown-header">Action:</div>
+                                        <a class="dropdown-item" href="#">Edit</a>
+                                        <a class="dropdown-item" href="#">Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                Label Target Date
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3">
+
+            <!-- Collapsable Card Example -->
+            <div class="card border-left-warning shadow mt-4 mb-4">
+                <!-- Card Header - Accordion -->
+                <a href="#ongoingTasksCard" class="d-block card-header py-3" data-toggle="collapse"
+                   role="button" aria-expanded="true" aria-controls="collapseCardExample">
+                    <h6 class="m-0 font-weight-bold text-primary">Ongoing Tasks</h6>
+                </a>
+                <!-- Card Content - Collapse -->
+                <div class="collapse show" id="ongoingTasksCard">
+                    <div class="card-body">
+                        <!-- Dropdown Card Example -->
+                        <div class="card shadow mb-4">
+                            <!-- Card Header - Dropdown -->
+                            <div
+                                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                <h6 class="m-0 font-weight-bold text-secondary">Printer Repair</h6>
+                                <div class="dropdown no-arrow">
+                                    <a class="dropdown-toggle" href="#" role="button" id="ongoingDropdownMenuLink"
+                                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                                         aria-labelledby="ongoingdropdownMenuLink">
+                                        <div class="dropdown-header">Action:</div>
+                                        <a class="dropdown-item" href="#">Edit</a>
+                                        <a class="dropdown-item" href="#">Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Card Body -->
+                            <div class="card-body">
+                                Label Target Date
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3">
+
+            <!-- Collapsable Card Example -->
+            <div class="card border-left-success shadow mt-4 mb-4">
+                <!-- Card Header - Accordion -->
+                <a href="#completedTasksCard" class="d-block card-header py-3" data-toggle="collapse"
+                   role="button" aria-expanded="true" aria-controls="collapseCardExample">
+                    <h6 class="m-0 font-weight-bold text-primary">Completed Tasks</h6>
+                </a>
+                <!-- Card Content - Collapse -->
+                <div class="collapse show" id="completedTasksCard">
+                    <div class="card-body">
+                        This is a collapsable card example using Bootstrap's built in collapse
+                        functionality. <strong>Click on the card header</strong> to see the card body
+                        collapse and expand!
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3">
+
+            <!-- Collapsable Card Example -->
+            <div class="card border-left-danger shadow mt-4 mb-4">
+                <!-- Card Header - Accordion -->
+                <a href="#cancelledTasksCard" class="d-block card-header py-3" data-toggle="collapse"
+                   role="button" aria-expanded="true" aria-controls="collapseCardExample">
+                    <h6 class="m-0 font-weight-bold text-primary">Cancelled Tasks</h6>
+                </a>
+                <!-- Card Content - Collapse -->
+                <div class="collapse show" id="cancelledTasksCard">
+                    <div class="card-body">
+                        This is a collapsable card example using Bootstrap's built in collapse
+                        functionality. <strong>Click on the card header</strong> to see the card body
+                        collapse and expand!
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+<!--    Task Modal-->
+    <div class="modal fade" id="newTaskModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Create New Task for Service Providers</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Modal body
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                    <a class="btn btn-primary" href="#">Submit</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </section>
 
