--- a/src/main/resources/templates/client-dashboard.html
+++ b/src/main/resources/templates/client-dashboard.html
@@ -24,10 +24,20 @@
 
         <hr class="sidebar-divider">
 
+        <div class="sidebar-heading">
+            Tasks
+        </div>
+
+        <li class="nav-item">
+            <a class="nav-link" href="/client/tasks/new">
+                <i class="fas fa-fw fa-briefcase"></i>
+                <span>New Request</span></a>
+        </li>
+
         <li class="nav-item">
             <a class="nav-link" href="/client/tasks">
                 <i class="fas fa-fw fa-briefcase"></i>
-                <span>Task Requests</span></a>
+                <span>Task List</span></a>
         </li>
 
     </section>
