--- a/src/main/resources/templates/client-tasks-list.html
+++ b/src/main/resources/templates/client-tasks-list.html
@@ -24,10 +24,20 @@
 
     <hr class="sidebar-divider">
 
+    <div class="sidebar-heading">
+        Tasks
+    </div>
+
+    <li class="nav-item">
+        <a class="nav-link" href="/client/tasks/new">
+            <i class="fas fa-fw fa-briefcase"></i>
+            <span>New Request</span></a>
+    </li>
+
     <li class="nav-item active">
         <a class="nav-link" href="/client/tasks">
             <i class="fas fa-fw fa-briefcase"></i>
-            <span>Task Requests</span></a>
+            <span>Task List</span></a>
     </li>
 
 </section>
@@ -35,9 +45,6 @@
 <!-- Page Content-->
 <section layout:fragment="body" class="px-3 py-1">
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newTaskModal">
-        Create New Task
-    </button>
     <div class="row">
         <div class="col-lg-3">
 
@@ -185,28 +192,6 @@
             </div>
         </div>
 
-    </div>
-
-<!--    Task Modal-->
-    <div class="modal fade" id="newTaskModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Create New Task for Service Providers</h5>
-                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    Modal body
-                </div>
-                <div class="modal-footer">
-                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                    <a class="btn btn-primary" href="#">Submit</a>
-                </div>
-            </div>
-        </div>
     </div>
 
 </section>
