--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -153,13 +153,13 @@
         <!-- End of Main Content -->
 
         <!-- Footer -->
-        <footer class="sticky-footer bg-white">
-            <div class="container my-auto">
-                <div class="copyright text-center my-auto">
-                    <span>Copyright &copy; Errand 2023</span>
-                </div>
-            </div>
-        </footer>
+<!--        <footer class="sticky-footer bg-white">-->
+<!--            <div class="container my-auto">-->
+<!--                <div class="copyright text-center my-auto">-->
+<!--                    <span>Copyright &copy; Errand 2023</span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </footer>-->
         <!-- End of Footer -->
 
     </div>
