--- a/src/main/resources/templates/admin-tasks.html
+++ b/src/main/resources/templates/admin-tasks.html
@@ -81,7 +81,7 @@
                 <td th:text="${task.createdDate}"></td>
                 <td th:text="${task.targetDate}"></td>
                 <td th:text="${task.street+', '+task.city+', '+task.postalCode}"></td>
-                <td th:text="${task.createdby}"></td>
+                <td th:text="${task.createdBy}"></td>
                 <td th:text="${task.Status}"></td>
                 <td><a class="btn btn-primary">View Task</a></td>
               </tr>
