added placeholder cards for reports

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -51,7 +51,45 @@
 
     <!-- Page Content-->
     <section layout:fragment="body" class="py-5">
-
+        <div class="container-fluid">
+            <div class="row row-cols-3 column-gap-1 row-gap-1">
+                <div class="col">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            Pending Tasks
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            Completed Tasks
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            Cancelled Tasks
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            Clients
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            Service Providers
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
 </body>
