added counts to placeholders

--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -56,35 +56,35 @@
                 <div class="col">
                     <div class="card shadow">
                         <div class="card-body">
-                            Pending Tasks
+                            <div class="card-title" th:text="${pendingTaskCount+' Pending Tasks'}"></div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card shadow">
                         <div class="card-body">
-                            Completed Tasks
+                            <div class="card-title" th:text="${completedTaskCount+' Completed Tasks'}"></div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card shadow">
                         <div class="card-body">
-                            Cancelled Tasks
+                            <div class="card-title" th:text="${cancelledTaskCount+' Cancelled Tasks'}"></div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card shadow">
                         <div class="card-body">
-                            Clients
+                            <div class="card-title" th:text="${clientCount+' Clients'}"></div>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card shadow">
                         <div class="card-body">
-                            Service Providers
+                            <div class="card-title" th:text="${serviceProviderCount+' Service Providers'}"></div>
                         </div>
                     </div>
                 </div>
